WIP still need to fix scrollbar for lots of content

--- a/src/core/Dialog/styles.css
+++ b/src/core/Dialog/styles.css
@@ -12,12 +12,6 @@
     justify-content: center;
 }
 
-/* TODO */
-/*.d2ui-paper {
-    width: 100%;
-    height: 100%;
-}*/
-
 .backdrop {
     pointer-events: all;
     cursor: default;
@@ -34,7 +28,7 @@
     animation-name: d2ui-dialog-backdrop-show;
 }
 
-.backdrop .animate-out {
+.backdrop.animate-out {
     animation-name: d2ui-dialog-backdrop-hide;
     animation-delay: 40ms;
     animation-fill-mode: forwards;
@@ -55,36 +49,29 @@
     max-width: calc(100vw - 3rem);
 }
 
-.window .small {
+.window.small {
     width: 400px;
 }
 
-.window .medium {
+.window.medium {
     width: 800px;
 }
 
-.window .large {
+.window.large {
     width: 1600px;
 }
 
-.window .fullscreen {
+.window.fullscreen {
     width: calc(100vw - 3rem);
     height: calc(100vh - 3rem);
 }
 
-.window .animate-out {
+.window.animate-out {
     animation-name: d2ui-dialog-window-hide;
     animation-delay: 0s;
     animation-fill-mode: forwards;
 }
 
-/* TODO */
-/*.window .d2ui-paper {
-    display: flex;
-    flex-direction: column;
-    max-height: calc(100vh - 3rem);
-}
-*/
 .title {
     display: flex;
     align-items: center;
